[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNelTuya"
version = "1.0.1"
authors = [
    { name="Orbinuity", email="orbinuity@ratgers.nl" },
]
description = "Control Tuya matrix lights with python"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "tinytuya"
]

[project.urls]
Donate = "https://www.patreon.com/cw/Orbinuity"
Homepage = "https://orbinuity.nl/project#pyneltuya"
Source = "https://github.com/orbinuity/pyneltuya"